[gd_scene load_steps=12 format=3 uid="uid://c0kysbw474wqn"]

[ext_resource type="Script" path="res://scripts/main_menu/main_menu.gd" id="1_7w5a6"]
[ext_resource type="PackedScene" uid="uid://c64ftsbvvugjk" path="res://scenes/menu_loop_scene.tscn" id="2_edvs8"]
[ext_resource type="PackedScene" uid="uid://bms34wbd0mko4" path="res://prefabs/menu/settings_menu.tscn" id="2_eli5e"]
[ext_resource type="PackedScene" uid="uid://crxdwuvlnrsuk" path="res://prefabs/menu/credits.tscn" id="3_juipk"]
[ext_resource type="PackedScene" uid="uid://dk0dddmpl201" path="res://prefabs/stream_utilities/button_group_sound_when_signal.tscn" id="4_nwlex"]
[ext_resource type="AudioStream" uid="uid://d3dr7sm4te000" path="res://art/music/main_menu/EscapeFromTheUnknown/escape-from-the-unknown_rage-sound.mp3" id="4_we5uw"]
[ext_resource type="PackedScene" uid="uid://dcxkowmduxb5y" path="res://prefabs/menu/loading_panel.tscn" id="7_y4405"]

[sub_resource type="Curve" id="Curve_haqvw"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_36up6"]
curve = SubResource("Curve_haqvw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vrmxl"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(1920, 1080, 1)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(-1, 1, 0)
spread = 20.0
initial_velocity_min = 10.0
initial_velocity_max = 40.0
gravity = Vector3(0, 0, 0)
scale_min = 3.0
scale_max = 5.0
scale_curve = SubResource("CurveTexture_36up6")
color = Color(0.713726, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kdk2e"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_7w5a6")
gameplay_scene = "res://scenes/gameplay.tscn"

[node name="MenuLoopScene" parent="." instance=ExtResource("2_edvs8")]

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(365, 207)
amount = 500
process_material = SubResource("ParticleProcessMaterial_vrmxl")
lifetime = 5.0
speed_scale = 32.2
randomness = 0.52

[node name="MainContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kdk2e")

[node name="MainMargin" type="MarginContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Buttons" type="VBoxContainer" parent="MainContainer/MainMargin"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/MainMargin/Buttons"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 75
text = "
UNBRICKE'D"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Spacer" type="Control" parent="MainContainer/MainMargin/Buttons"]
layout_mode = 2
size_flags_vertical = 3

[node name="Play" type="Button" parent="MainContainer/MainMargin/Buttons" groups=["MenuButtons"]]
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="MainContainer/MainMargin/Buttons" groups=["MenuButtons"]]
layout_mode = 2
text = "Settings"

[node name="Credits" type="Button" parent="MainContainer/MainMargin/Buttons" groups=["MenuButtons"]]
layout_mode = 2
text = "Credits"

[node name="Exit" type="Button" parent="MainContainer/MainMargin/Buttons" groups=["MenuButtons"]]
layout_mode = 2
text = "Exit"

[node name="Credits" parent="." instance=ExtResource("3_juipk")]
unique_name_in_owner = true
visible = false

[node name="SettingsMenu" parent="." instance=ExtResource("2_eli5e")]
unique_name_in_owner = true
visible = false

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_we5uw")
volume_db = -10.0
autoplay = true
bus = &"Music"

[node name="ButtonSounds" type="Node" parent="."]

[node name="ButtonsMouseEnteredSound" parent="ButtonSounds" instance=ExtResource("4_nwlex")]
button_group_name = "MenuButtons"
signal_name = "mouse_entered"

[node name="LoadingPanel" parent="." instance=ExtResource("7_y4405")]
unique_name_in_owner = true
visible = false

[connection signal="pressed" from="MainContainer/MainMargin/Buttons/Play" to="." method="start_game"]
[connection signal="pressed" from="MainContainer/MainMargin/Buttons/Settings" to="." method="open_settings"]
[connection signal="pressed" from="MainContainer/MainMargin/Buttons/Credits" to="." method="open_credits"]
[connection signal="pressed" from="MainContainer/MainMargin/Buttons/Exit" to="." method="close_game"]
